# blinkzero

./: README.md  schema.sql
.github/workflows/: CI.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-260f83542aac42f6ad59978794f51d3224c33657561233dbbbd65d4438664974.json  query-4b80229f0779f9ff7dc92491534b59b3a5bded4a18f39ab6eb19836ce52d7ebe.json  query-a674e8d5357fbebaadd0423e50bd58cc5b23d56c6781f77848ae82d480c039d8.json
backend/configuration/: base.yaml  local.yaml  production.yaml
backend/migrations/: 20251210055502_create_blinks_table.sql
backend/scripts/: initdb.sh
backend/src/: configuration.rs  handlers.rs  lib.rs  main.rs  models.rs  startup.rs  telemetry.rs
backend/src/handlers/: actions.rs  blinks.rs  health.rs  mod.rs
backend/tests/: blinks.rs  health_check.rs  helpers.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
