[package]
name = "blinkzero"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", default-features = false, features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
solana-sdk = "=2.1.0"
solana-client = "=2.1.0"
solana-system-interface = { version = "=2.0.0", features = ["bincode"] }
config = "0.15.19"
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "4.7.0"
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = "1.3"
tower_governor = "0.8.0"
governor = "0.10.2"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]
